--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,8 +1,6 @@
 .profile {
   display: flex;
   padding-top: calc(160px - (74px + 45px));
-  width: calc(100% - 400px);
-  margin: 0 auto;
 }
 
 .profile__image {
@@ -106,16 +104,16 @@
     flex-grow: 0;
   }
 
-  .profile__add-image {
+  .profile__add {
     width: 282px;
     height: 50px;
-    margin-top: 36px;
+    margin: 36px 0;
     border-width: 2px;
     border-color: white;
     border-style: solid;
   }
 
-  .profile__add-image_image {
+  .profile__add-image {
     width: 16px;
     height: 16px;
   }
